src/objects/Opportunity_Solution_Commitment__c.object
<CustomObject>
    <fields>
        <fullName>opp_soln_comt_expiry_date__c</fullName>
        <formula>IF( ISNULL( price_quote_date__c ),NULL,price_quote_date__c+ opp_soln_comt_expiry_days_number__c )</formula>
        <label>Expiry date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>opp_soln_comt_expiry_days_number__c</fullName>
        <label>Expiry days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opp_soln_comt_stay_days_number__c</fullName>
        <label>Stay days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opp_solution_commitment_amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>opp_solution_commitment_id__c</fullName>
        <label>Identifier</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opp_solution_commitment_number__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>opp_solution_comt_product_name__c</fullName>
        <label>Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opp_solution_id__c</fullName>
        <label>Opportunity Product</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>opportunity_id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunity Solution Commitments</relationshipLabel>
        <relationshipName>Opportunity_Solution_Commitments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>price_quote_date__c</fullName>
        <label>Price quote date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>added_to_price_quotation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Added to price quotation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>price_quotation_id__c</fullName>
        <label>Price quotation id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>price_quotation_method__c</fullName>
        <label>Price quotation method</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Compromiso Precio</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>opp_solution_comt_product_name__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>opp_solution_commitment_amount__c</columns>
        <columns>opp_soln_comt_expiry_days_number__c</columns>
        <columns>opp_soln_comt_stay_days_number__c</columns>
        <columns>opportunity_id__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>OSC-{0000000000}</displayFormat>
        <label>Reference</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Compromisos Precio</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>